--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -1,4 +1,7 @@
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5R7F2G9" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<noscript>
+  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5R7F2G9" height="0" width="0"
+          style="display:none;visibility:hidden"></iframe>
+</noscript>
 
 <!-- Header Start -->
 <div class="header__wrap">
@@ -7,11 +10,20 @@
     <!-- mobile header -->
     <div class="mobile header d-md-none mobile-column-wrap d-sm-flex">
       <section class="section-header-logo">
-        <img data-srcset="{{ .Site.BaseURL }}img/wlf_shield_white.svg" src="{{ .Site.BaseURL }}img/wlf_shield_white.svg" class="img-fluid" alt="Wilshire Law Firm logo">
+        <img data-srcset="{{ .Site.BaseURL }}img/wlf_shield_white.svg"
+             src="{{ .Site.BaseURL }}img/wlf_shield_white.svg" class="img-fluid" alt="Wilshire Law Firm logo">
       </section>
       <div class="section-header-right">
-        <a class="subhero__phone-num d-sm-block d-md-none capPhone" href="tel:18337720583" onclick="dataLayer.push({'event':'Contact', 'eventAction':'Call', 'eventNumber': 'Header Mobile Call- 1.833.772.0583'});">
-          <span>833.772.0583</span>
+        <a class="subhero__phone-num d-sm-block d-md-none capPhone"
+           href="tel:{{ .Site.Params.phoneNumDigitsOnly }}"
+           onclick="dataLayer.push(
+                       {
+                       'event':'Contact',
+                       'eventAction':'Call',
+                        'eventNumber': 'Header Mobile Call- {{ .Site.Params.phoneNumDigitsOnly }}'
+                       }
+                       );">
+          <span class="phoneNumberFormatted"></span>
         </a>
         <img src="" data-src="{{ .Site.BaseURL }}img/header_divider.png" class="img-fluid lazyload" alt="">
         <section class="hablamos24" style="width:100%;">
@@ -23,23 +35,31 @@
     </div>
   </div>
 
-    <!--tablet header -->
+  <!--tablet header -->
   <div class="container-fluid tablet header d-none d-md-flex">
-      <section class="section-header-logo">
-        <img data-src="{{ .Site.BaseURL }}img/wlf_long_white.svg" src=""
-             class="img-fluid lazyload" alt="Wilshire Law Firm logo">
-      </section>
-      <div class="hablamos24__wrap capPhone">
-        <span>HABLAMOS ESPANOL &#8226; AVAILABLE 24/7</span>
+    <section class="section-header-logo">
+      <img data-src="{{ .Site.BaseURL }}img/wlf_long_white.svg" src=""
+           class="img-fluid lazyload" alt="Wilshire Law Firm logo">
+    </section>
+    <div class="hablamos24__wrap capPhone">
+      <span>HABLAMOS ESPANOL &#8226; AVAILABLE 24/7</span>
+    </div>
+    <div class="header__rightsection">
+      <a class="header__phonenum capPhone font-weight-semi" href="tel:{{ .Site.Params.phoneNumDigitsOnly }}"
+         onclick="dataLayer.push(
+                   {
+                   'event':'Contact',
+                    'eventAction':'Call',
+                    'eventNumber': 'Header Mobile Call- {{ .Site.Params.phoneNumDigitsOnly }}'
+                   });">
+        <span class="phoneNumberFormatted"></span>
+      </a>
+      <div class="header__chatwidget header__text1"
+           onclick="window.open('https://platform.clientchatlive.com/w/chat/#/chat/wChz3T/register', '', 'width=800,height=500,toolbar=0,menubar=0,location=0,status=0,scrollbars=1,menubar=0,toolbar=0,resizable=1,left=50,top=50');">
+        <img src="" data-src="{{ .Site.BaseURL }}img/Chat_Widget.svg" class="img-fluid lazyload" alt="">
       </div>
-      <div class="header__rightsection">
-        <a class="header__phonenum capPhone font-weight-semi" href="tel:18337720583" onclick="dataLayer.push({'event':'Contact', 'eventAction':'Call', 'eventNumber': 'Header Mobile Call- 1.833.772.0583'});">
-          833.772.0583
-        </a>
-        <div class="header__chatwidget header__text1" onclick="window.open('https://platform.clientchatlive.com/w/chat/#/chat/wChz3T/register', '', 'width=800,height=500,toolbar=0,menubar=0,location=0,status=0,scrollbars=1,menubar=0,toolbar=0,resizable=1,left=50,top=50');">
-          <img src="" data-src="{{ .Site.BaseURL }}img/Chat_Widget.svg" class="img-fluid lazyload" alt="">
-        </div>
-      </div>
+    </div>
   </div>
 </div>
 <!-- header close -->
+
