new feature: phone numbers set to variables

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -5,10 +5,12 @@
              class="img-fluid lazyload" alt="Wilshire Law Firm logo">
         <div class="footer__address">3055 Wilshire Blvd., 12th Floor<br> Los Angeles, CA 90010</div>
         <div class="footer__copyright">&copy; 2020 Wilshire Law Firm |
-            <a href="https://www.wilshirelawfirm.com/privacy/" target="_blank" title="Wilshire Law Firm Privacy Policy" rel="noreferrer">Privacy Policy</a>
+            <a href="https://www.wilshirelawfirm.com/privacy/" target="_blank" title="Wilshire Law Firm Privacy Policy"
+               rel="noreferrer">Privacy Policy</a>
         </div>
         <p style="display:none;">
-            <span style="display:none;">(888) 979-1278</span>
+            <span style="display:none;">{{ .Site.Params.phoneNumHidden }}</span>
         </p>
     </div>
 </div>
+
