new feature: phone numbers set to variables

--- a/site/layouts/partials/end.html
+++ b/site/layouts/partials/end.html
@@ -2,8 +2,13 @@
 <div id="mobile-pop-container">
     <div class="visible-xs visible-sm">
         <div class="mobile-call-pop text-center">
-            <a class="mobile-call-btn capPhone" href="tel:8553350244"
-               onclick="dataLayer.push({'event':'Contact', 'eventAction':'Call', 'eventNumber': 'Mobile Footer - 8553350244'});">
+            <a class="mobile-call-btn capPhone" href="tel:{{ .Site.Params.phoneNumDigitsOnly }}"
+               onclick="dataLayer.push(
+                   {
+                   'event':'Contact',
+                    'eventAction':'Call',
+                     'eventNumber': 'Mobile Footer - {{ .Site.Params.phoneNumDigitsOnly }}'
+                   });">
                 <i class="icon-tap2call"></i> <span class="tap-to-call-text">TAP TO CALL NOW</span>
             </a>
             <!--<span class="available white">AVAILABLE NOW</span>-->
@@ -110,34 +115,34 @@ https://io.clickguard.com/n/cHJvdGVjdG9y/je8TmfGv
 
 <!-- begin ClickGUARD Conversion Code -->
 <script type="text/javascript">
-  jQuery(document).ready(function ($) {
-    $(function () {
-      $('.subhero__phone-num').on('click', function () {
-        cg_convert('Header phone number');
-      });
-    });
-    $(function () {
-      $('.hero .gform_button').on('click', function () {
-        cg_convert('Hero Form');
-      });
-    });
-    $(function () {
-      $('.gform_footer .gform_button').on('click', function () {
-        cg_convert('Footer Form');
-      });
-    });
-    $(function () {
-      $('.ccl-slider-bubble').on('click', function () {
-        cg_convert('Client chat live');
-      });
-    });
-    $(function () {
-      $('.mobile-call-btn').on('click', function () {
-        cg_convert('Tap to call');
-      });
-    });
+    jQuery(document).ready(function ($) {
+        $(function () {
+            $('.subhero__phone-num').on('click', function () {
+                cg_convert('Header phone number');
+            });
+        });
+        $(function () {
+            $('.hero .gform_button').on('click', function () {
+                cg_convert('Hero Form');
+            });
+        });
+        $(function () {
+            $('.gform_footer .gform_button').on('click', function () {
+                cg_convert('Footer Form');
+            });
+        });
+        $(function () {
+            $('.ccl-slider-bubble').on('click', function () {
+                cg_convert('Client chat live');
+            });
+        });
+        $(function () {
+            $('.mobile-call-btn').on('click', function () {
+                cg_convert('Tap to call');
+            });
+        });
 
-  });
+    });
 </script>
 <!-- end ClickGUARD Conversion Code -->
 <!--<script>-->
@@ -153,3 +158,4 @@ https://io.clickguard.com/n/cHJvdGVjdG9y/je8TmfGv
         jQuery('[name="gclid_field"]').attr('value', gclid)
     });
 </script>
+
