--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -10,7 +10,7 @@
                         </div>
                     </h1>
                     <h2 class="d-sm-block d-md-block d-lg-none big_text2 font-weight-regular text-center">
-                        <span>Top-Rated Attorneys Handling Workplace Discrimination Cases</span>
+                        <span>Top-Rated Attorneys Handling Workplace Discrimination Claims</span>
                     </h2>
                 </div>
                 <div class="standard hero__attorneys">
@@ -36,7 +36,7 @@
                         </h1>
                         <h2 class="">
                             <div class="headline__big-text2 font-weight-regular">
-                                <div>Top-Rated Attorneys Handling Workplace Discrimination Cases</div>
+                                <div>Top-Rated Attorneys Handling Workplace Discrimination Claims</div>
                             </div>
                         </h2>
                         <picture class="superlawyers">
