Workplace Discrimination LP copy change bottom paragraph text

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -72,17 +72,38 @@
                     </div>
 
                     <p>
-                        Federally, Title VII of the Civil Rights Act of 1964 protects employees from being racially discriminated against. California's Fair Employment and Housing Act solidifies this stand by
-                        making it unlawful “for any person to discriminate against any person in the selection, termination, training or other terms or treatment of
-                        that person...because of race.” These laws prevent companies from treating employees differently because of their race or implementing workplace practices
-                        that have a negative impact on certain races. Common examples of racial discrimination include lower rages, failure to provide benefits,
-                        unnecessarily disciplining or even firing employees, or implementing policies that hair be styled a certain way. If you feel like your
-                        workplace has racially discriminated against you, then it's time to hire a race discrimination lawyer from Wilshire Law Firm!
-                        Wilshire Law Firm's racial discrimination lawyers have one goal: to help you seek justice against companies that have wronged you through
-                        discriminatory practices. We have proven time and time against that our techniques work and have won our clients more than 750 million dollars in compensation!
-                        Companies believe that their discriminatory practices will go unchallenged but our racial discrimination lawyers will show them otherwise.
-                        By bringing your case to us, you're not only seeking justice for yourself, but helping to prevent employers from discriminating against others.
-                        For a free consultation on your case, call Wilshire Law Firm today.
+                        Retaliation occurs when an employer takes steps to punish an employee or job application for
+                        exercising their rights to be free of workplace discrimination. Workers in California are
+                        protected by both federal law (the U.S. Equal Opportunity Commision) and a number of state laws
+                        and legal provisions.
+                    </p>
+                    <p>
+                        Under these laws, employers are prohibited from retaliating against workers or applicants for
+                        reasons such as the following:
+                    </p>
+                    <ul>
+                        <li>Reporting employment discrimination (including harassment) to a manager or supervisor</li>
+                        <li>Initiating or witnessing a discrimination complaint, charge, lawsuit, or investigation</li>
+                        <li>Cooperating with an investigation about alleged harassment</li>
+                        <li>Refusing to comply with orders that would lead to an act of discrimination</li>
+                        <li>Asking for accommodations based one’s disability or religion</li>
+                        <li>Inquiring about salary information in the workplace in order to identify the possibility of
+                            discriminatory wages</li>
+                        <li>Refusing to sign certain agreements with the employer</li>
+                        <li>Reporting illegal activity by the employer to a public agency</li>
+                        <li>Filing a workers’ compensation claim</li>
+                    </ul>
+                    <p>
+                        <strong>Acts of retaliation can take the form of an unfair termination, demotion, reduction in pay,
+                            transfer, as well as other activities</strong> such as spreading rumors about the employee or applicant,
+                        or giving a worker a performance review that is lower than deserved.
+                    </p>
+                    <p>
+                        If you believe you are the victim of workplace retaliation, take action now against your
+                        employer. At Wilshire Law Firm, we have some of the state’s and nation’s leading attorneys who
+                        can help you stand up for your rights and seek the compensation you deserve. Our lawyers don’t
+                        back down against big-business employers! <strong>Fill out this form to receive a free, no-obligation
+                        consultation.</strong>
                     </p>
                 </div>
 
