--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -6,37 +6,46 @@
             </div>
         </div>
         <div class="row">
-            <div class="whywlf__form__container__before offset-sm-1 col-sm-10 offset-md-2 col-md-8 offset-lg-0 col-lg-4" STYLE="background: #3c4e66; display: flex;">
+            <div class="whywlf__form__container__before offset-sm-1 col-sm-10 offset-md-2 col-md-8 offset-lg-0 col-lg-4"
+                 STYLE="background: #3c4e66; display: flex;">
                 <div class="wlf-form__container">
                     <h3 class="text-left font-weight-bold">FREE CONSULTATION 24/7</h3>
                     <noscript>PLEASE ENABLE JAVASCRIPT IN YOUR BROWSER TO SEE THE FORM</noscript>
-                    <form name="LP19 Bottom Form" id="LP19_Bottom_Form" class="d-none" method="POST" data-netlify="true" action="/thank-you/" netlify-honeypot="honeypot-bot-field">
+                    <form name="LP19 Bottom Form" id="LP19_Bottom_Form" class="d-none" method="POST" data-netlify="true"
+                          action="/thank-you/" netlify-honeypot="honeypot-bot-field">
                         <div class="form-group d-none">
-                            <label>Don’t fill this out if you're human: <input name="honeypot-bot-field" /></label>
+                            <label>Don’t fill this out if you're human: <input name="honeypot-bot-field"/></label>
                         </div>
                         <div class="form-group">
                             <label for="firstName_bottom">First Name</label>
-                            <input  name="firstName" class="form-control wlf-form--empty" id="firstName_bottom" placeholder="First Name" aria-label="Enter Your First Name">
+                            <input name="firstName" class="form-control wlf-form--empty" id="firstName_bottom"
+                                   placeholder="First Name" aria-label="Enter Your First Name">
                             <div class="messages"></div>
                         </div>
                         <div class="form-group">
                             <label for="lastName_bottom">Last Name</label>
-                            <input name="lastName" class="form-control wlf-form--empty" id="lastName_bottom" placeholder="Last Name" aria-label="Enter Your Last Name">
+                            <input name="lastName" class="form-control wlf-form--empty" id="lastName_bottom"
+                                   placeholder="Last Name" aria-label="Enter Your Last Name">
                             <div class="messages"></div>
                         </div>
                         <div class="form-group">
                             <label for="phone_bottom">Phone</label>
-                            <input name="phone" type="tel" class="form-control bfh-phone wlf-form--empty" data-country="US" id="phone_bottom" placeholder="Phone" aria-label="Enter Your Phone">
+                            <input name="phone" type="tel" class="form-control bfh-phone wlf-form--empty"
+                                   data-country="US" id="phone_bottom" placeholder="Phone"
+                                   aria-label="Enter Your Phone">
                             <div class="messages"></div>
                         </div>
                         <div class="form-group">
                             <label for="email_bottom">Email</label>
-                            <input name="email" type="email" class="form-control wlf-form--empty" id="email_bottom" placeholder="Email" aria-label="Enter Your Email">
+                            <input name="email" type="email" class="form-control wlf-form--empty" id="email_bottom"
+                                   placeholder="Email" aria-label="Enter Your Email">
                             <div class="messages"></div>
                         </div>
                         <div class="form-group">
                             <label for="bottom-form-textarea">Tell Us How We Can Help You</label>
-                            <textarea name="description" class="form-control wlf-form--empty" id="bottom-form-textarea" rows="3" style="height:100px;" placeholder="Tell Us How We Can Help You" aria-label="Tell Us How We Can Help You"></textarea>
+                            <textarea name="description" class="form-control wlf-form--empty" id="bottom-form-textarea"
+                                      rows="3" style="height:100px;" placeholder="Tell Us How We Can Help You"
+                                      aria-label="Tell Us How We Can Help You"></textarea>
                             <div class="messages"></div>
                         </div>
                         <div class="form-group">
@@ -44,7 +53,7 @@
                             <div class="messages"></div>
                         </div>
                         <div class="form-group">
-                            <input type="hidden" id="pageurl-bottom"  name="pageurl-bottom" value="pageurl-bottom" />
+                            <input type="hidden" id="pageurl-bottom" name="pageurl-bottom" value="pageurl-bottom"/>
                             <input name="branchname-bottom" id="branchname-bottom" type="hidden" value="lp19short">
                             <div class="messages"></div>
                         </div>
@@ -53,14 +62,18 @@
                             <div class="messages"></div>
                         </div>
                     </form>
-                    <p style="font-size: 8px;line-height: 1.25;color: #b4b4b4;margin-top: 10px;margin-bottom: 0;">By submitting this form, you agree to receive calls at any time, including hours outside of business hours. This is so that we may reach you as soon as possible in order to consult on your potential case.</p>
+                    <p style="font-size: 8px;line-height: 1.25;color: #b4b4b4;margin-top: 10px;margin-bottom: 0;">By
+                        submitting this form, you agree to receive calls at any time, including hours outside of
+                        business hours. This is so that we may reach you as soon as possible in order to consult on your
+                        potential case.</p>
                 </div>
             </div>
             <div class="whywlf__paragraph_container offset-sm-1 col-sm-10 offset-md-2 col-md-8 offset-lg-0 col-lg-7">
                 <picture class="d-none d-lg-block">
                     <source data-srcset="{{ .Site.BaseURL }}img/CELA.webp" type="image/webp" class="img-fluid">
                     <source data-srcset="{{ .Site.BaseURL }}img/CELA.jpg" type="image/jpg" class="img-fluid">
-                    <img data-src="{{ .Site.BaseURL }}img/CELA.jpg" src="" class="img-fluid lazyload float-right" alt="">
+                    <img data-src="{{ .Site.BaseURL }}img/CELA.jpg" src="" class="img-fluid lazyload float-right"
+                         alt="">
                 </picture>
 
                 <div class="text-left supporttext__paragraph_container">
@@ -88,22 +101,25 @@
                         <li>Refusing to comply with orders that would lead to an act of discrimination</li>
                         <li>Asking for accommodations based one’s disability or religion</li>
                         <li>Inquiring about salary information in the workplace in order to identify the possibility of
-                            discriminatory wages</li>
+                            discriminatory wages
+                        </li>
                         <li>Refusing to sign certain agreements with the employer</li>
                         <li>Reporting illegal activity by the employer to a public agency</li>
                         <li>Filing a workers’ compensation claim</li>
                     </ul>
                     <p>
-                        <strong>Acts of retaliation can take the form of an unfair termination, demotion, reduction in pay,
-                            transfer, as well as other activities</strong> such as spreading rumors about the employee or applicant,
+                        <strong>Acts of retaliation can take the form of an unfair termination, demotion, reduction in
+                            pay,
+                            transfer, as well as other activities</strong> such as spreading rumors about the employee
+                        or applicant,
                         or giving a worker a performance review that is lower than deserved.
                     </p>
                     <p>
                         If you believe you are the victim of workplace retaliation, take action now against your
                         employer. At Wilshire Law Firm, we have some of the state’s and nation’s leading attorneys who
                         can help you stand up for your rights and seek the compensation you deserve. Our lawyers don’t
-                        back down against big-business employers! <strong>Fill out this form to receive a free, no-obligation
-                        consultation.</strong>
+                        back down against big-business employers! <strong>The process is discreet and you don’t pay
+                        unless you win. Call now to receive a free, no-obligation consultation.”</strong>
                     </p>
                 </div>
 
