updated header conversion snippet for employment

--- a/site/layouts/partials/head_custom.html
+++ b/site/layouts/partials/head_custom.html
@@ -2,6 +2,16 @@
 If you want to include any custom html just before </head>, put it in /layouts/partials/head_custom.html
 Do not put anything in this file - it's only here so that hugo won't throw an error if /layouts/partials/head_custom.html doesn't exist.
 -->
+
+<!-- Global site tag (gtag.js) - Google Ads: 663715077 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-663715077"</script>>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'AW-663715077');
+</script>
+
 <style>
     @media screen AND (min-width:992px) {
         #mobile-pop-container {
