updated header conversion snippet for employment

--- a/site/layouts/partials/head_custom.html
+++ b/site/layouts/partials/head_custom.html
@@ -4,7 +4,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
 -->
 
 <!-- Global site tag (gtag.js) - Google Ads: 663715077 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-663715077"</script>>
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-663715077"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
