async load conversion codes

--- a/site/layouts/partials/head_custom.html
+++ b/site/layouts/partials/head_custom.html
@@ -516,6 +516,8 @@ gtag('config', 'AW-663715077');
 
 </style>
 
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion_async.js" charset="utf-8"></script>
+
 
 <!-- Event snippet for EMP - Lead Form Submission conversion page -->
 
