updated conversion code removed swipers.css from codebase as it's not being used. minified header css

--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -36,7 +36,7 @@
                         </h1>
                         <h2 class="">
                             <div class="headline__big-text2 font-weight-regular">
-                                <div>Top-Rated Attorneys Handling Sexual Harassment Claims</div>
+                                <div>Top-Rated Attorneys Handling <br>Sexual Harassment Claims</div>
                             </div>
                         </h2>
                         <picture class="superlawyers">
