updated conversion code removed swipers.css from codebase as it's not being used. minified header css

--- a/site/layouts/partials/head_custom.html
+++ b/site/layouts/partials/head_custom.html
@@ -3,507 +3,25 @@ If you want to include any custom html just before </head>, put it in /layouts/p
 Do not put anything in this file - it's only here so that hugo won't throw an error if /layouts/partials/head_custom.html doesn't exist.
 -->
 <style>
-    @media screen AND (min-width:992px) {
-        #mobile-pop-container {
-            display: none
-        }
-    }
-
-    @media screen AND (max-width:767px) {
-        #back-to-top {
-            display: none
-        }
-    }
-
-    .header__wrap {
-        background: #3c4e66;
-    }
-    @media screen AND (min-width:992px) {
-        .header__wrap{
-            align-items: center;
-            height: 81px;
-        }
-    }
-
-    .u-remove-all-padding {
-        padding: 0!important
-    }
-
-    .container-fluid {
-        align-content: stretch;
-        align-items: stretch;
-        flex-wrap: wrap;
-        max-width: 1284px;
-        position: relative
-    }
-
-    @media only screen and (max-width:767px) {
-        .header {
-            flex-wrap: wrap
-        }
-    }
-
-
-
-    @media only screen and (max-width:767px) {
-        .section-header-logo {
-            align-items: center;
-            display: -webkit-flex;
-            display: flex;
-            justify-content: center;
-            width: 100%
-            justify-content: center;
-        }
-        .header {
-            display: flex;
-            justify-content: space-between;
-            padding: 10px;
-        }
-        .section-header-right img{
-            margin: 5px auto;
-        }
-        .section-header-logo img{
-            padding-right:5px;
-        }
-
-    }
-
-    .section-header-logo {
-        justify-content: left;
-        width: 25%;
-    }
-
-    .section-header-right {
-        width: 75%;
-        display: flex;
-        flex-direction: column;
-        line-height: normal;
-        padding-left: 5px;
-        padding-right: 5px;
-        justify-content: center;
-        visibility: hidden;
-    }
-    .subhero__phone-num {
-        align-items: center;
-        display: flex;
-        display: -webkit-flex;
-        -webkit-align-items: center;
-        -webkit-justify-content: center;
-        font-size: 22px;
-        font-weight: 400;
-        height: 40px;
-        justify-content: center;
-        letter-spacing: 1.5px;
-        width: 100%;
-    }
-
-    .subhero__phone-num{
-        color: #fff;
-    }
-
-    a.subhero__phone-num:hover {
-        color: #000
-    }
-
-    @media only screen and (max-width:767px) {
-        a.subhero__phone-num {
-            padding-left: 2px
-        }
-    }
-
-    .freeconsult i.fa,
-    .subhero__phone-num i.fa {
-        padding-right: 5px
-    }
-
-    .subhero__free-case-consult {
-        align-items: center;
-        background: #fff;
-        color: #000;
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-align: center;
-        width: 100%
-    }
-
-    .subhero__free-case-consult button {
-        margin-bottom: 6px;
-        margin-top: 6px;
-        max-width: 90vw;
-        width: 90vw
-    }
-
-    .subhero__free-case-consult .btn-primary:not(:disabled):not(.disabled).active {
-        background: #0c1c42
-    }
-
-    .subhero {
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        padding: 0
-    }
-
-    @media only screen and (min-width:992px) {
-        .subhero {
-            flex-direction: row;
-            justify-content: space-between;
-        }
-    }
-
-    @media only screen and (max-width:767px) {
-        .hablamos24 {
-            color: #f16825;
-            text-align: center;
-        }
-    }
-
-    @media only screen and (max-width:767px) {
-        .hablamos24 {
-            width: 100%
-        }
-        .hablamos24 a {
-            color: #000
-        }
-    }
-
-    section {
-        justify-content: unset
-    }
-
-    .hablamos24 a {
-        color: #000
-    }
-
-    .hablamos24__wrap {
-        font-size: 12px;
-        font-weight: 700;
-        display: -webkit-flex;
-        display: flex;
-        padding: 0;
-        text-align: center;
-        justify-content: center;
-    }
-
-    @media only screen and (max-width:767px) {
-        .hablamos24__wrap {
-            width: 100%
-        }
-        .hablamos24__block1,
-        .hablamos24__block2 {
-            font-size: calc(12px+.6vw);
-            width: 50%
-        }
-    }
-
-    @media only screen and (max-width:374px) {
-        .hablamos24__wrap {
-            padding: 0
-        }
-        .hablamos24__block1,
-        .hablamos24__block2 {
-            font-size: 13px;
-            width: 50%
-        }
-    }
-
-    .hablamos24__block1 {
-        text-align: center
-    }
-
-    .hablamos24__block2 {
-        text-align: center
-    }
-
-    .hablamos24__block1,
-    .hablamos24__block2 {
-        padding-bottom: 10px;
-        padding-top: 10px
-    }
-
-    @media only screen and (max-width:374px) {
-        .hablamos24__block1,
-        .hablamos24__block2 {
-            padding: 6px
-        }
-    }
-
-    @media only screen and (min-width:992px) {
-        .hablamos24__block1,
-        .hablamos24__block2 {
-            padding: 12px 15px 12px 15px
-        }
-        .hablamos24__block1{
-            position: relative;
-        }
-    }
-
-    .hero-wrap {
-        /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ced7e0+0,ffffff+100 */
-        background: #ced7e0; /* Old browsers */
-        background: -moz-linear-gradient(top,  #ced7e0 0%, #ffffff 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(top,  #ced7e0 0%,#ffffff 100%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to bottom,  #ced7e0 0%,#ffffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ced7e0', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
-    }
-
-    .desktop.hero-wrap{
-        overflow: hidden;
-    }
-    .standard.hero__attorneys div{
-        height: 173px;
-    }
-    .webp .standard.hero__attorneys div{
-        background-image: url('/img/hero-group-mobile.webp');
-        background-repeat: no-repeat;
-        background-position: center 100%;
-    }
-    .no-webp .standard.hero__attorneys div{
-        background: url('/img/hero-group-mobile.png');
-        background-repeat: no-repeat;
-        background-position: center 100%;
-    }
-    @media only screen and (max-width:390px) {
-        .webp .standard.hero__attorneys div,.no-webp .standard.hero__attorneys div{
-            background-position: 80% 100%;
-        }
-    }
-    @media only screen and (max-width:360px) {
-        .webp .standard.hero__attorneys div,.no-webp .standard.hero__attorneys div{
-            background-position: 70% 100%;
-        }
-    }
-    @media only screen and (max-width:345px) {
-        .webp .standard.hero__attorneys div{
-            background-position: 61% 100%;
-        }
-    }
-
-
-
-/*    @media only screen and (min-width:992px) {
-        .webp .desktop .hero{
-            background-image: url('/img/attorneys-desktop.png');
-        }
-        .nowebp .desktop .hero{
-            background-image: url('/img/attorneys-desktop.webp');
-        }
-        .desktop .hero{
-            background-repeat: no-repeat;
-        }
-    }*/
-
-
-
-
-
-    .desktop .hero {
-        height: 23vw;
-    }
-
-    @media only screen and (min-width:1440px) {
-        .desktop .hero {
-            height: 331.188px;
-        }
-    }
-
-    .desktop .attorneys{
-        display: flex;
-        align-self: flex-end;
-    }
-    .hero {
-        display: -webkit-flex;
-        display: flex;
-        -webkit-justify-content: center;
-        justify-content: center
-    }
-    @media only screen and (min-width:992px) {
-        .hero{
-            justify-content: space-between;
-        }
-    }
-
-    section {
-        align-items: center;
-        display: -webkit-flex;
-        display: flex!important
-    }
-
-    .hero__left {
-        display: block;
-        width: 100%
-    }
-
-    .hero__headline {
-        border: 0 solid #fff;
-        padding-top: 10px;
-        margin: 0 auto;
-        max-width: 500px;
-        width: 85%;
-    }
-    .desktop .hero__headline{
-        max-width: none;
-        /*display: flex;*/
-        /*-webkit-justify-content: space-between;*/
-        /*display: -ms-flexbox;*/
-        flex-direction: column;
-        height: 100%;
-        /*justify-content: space-evenly;*/
-    }
-
-    .hero__headline h1,
-    .hero__headline h2 {
-        border: 0 solid #ccc;
-        color: #3d4e68;
-        font-size: 10px;
-        width: 100%;
-    }
-    .standard .hero__headline h2{
-        font-size: 4.5vw;
-    }
-    @media screen and (min-width: 414px) {
-        .standard .hero__headline h2{
-            font-size: 22.5px;
-        }
-    }
-
-    .desktop .hero__headline h2{
-        font-size: 1.5vw;
-    }
-
-    @media only screen and (min-width:1440px) {
-        .desktop .hero__headline{
-            width: 403.188px;
-        }
-        .desktop .hero__headline h2{
-            font-size: 22.024px;
-        }
-
-    }
-
-
-    .hero__headline h1 {
-        text-transform: uppercase
-    }
-
-    .hero__headline h2 {
-        /*text-transform: capitalize*/
-    }
-
-    #wlf-form>div>div.hero__headline>h1.d-none.d-md-block {
-        margin-bottom: 0
-    }
-
-    .headline__big-text {
-        font-size: 9px;
-        line-height: 1
-    }
-    @media only screen and (min-width:992px) {
-        .standard .hero__left {
-            width: 70%
-        }
-        .hero__headline {
-            margin: 0;
-            padding: 0;
-            position: absolute;
-            top: 0;
-            width: 28vw;
-        }
-        .hero__attorneys {
-            display: block;
-            width: 100%
-        }
-        .hero .wlf-form {
-            background: 0 0;
-            width: 30%;
-            max-width: 273px;
-        }
-        .hero .wlf-form__container {
-            width: 100%
-        }
-        .darion .hero .wlf-form__container {
-            padding: 0
-        }
-        .desktop picture.attorneys{
-            margin-left: 24vw;
-            margin-right: 1vw;
-        }
-        .desktop picture.attorneys{
-
-        }
-        .hero__form-title {
-            color: #3d4e68;
-            font-size: 1.2vw;
-            font-weight: 700
-        }
-        .esp .darion .hero__form-title {
-            padding: 5px 10px
-        }
-        .hero .tell-us-case {
-            display: none
-        }
-        .hero__awards-cta {
-            align-items: flex-end;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            display: -ms-flexbox;
-            -ms-flex-pack: center;
-            width: 30%
-        }
-        .desktop .superlawyers img{
-            max-width: 178px;
-            width: 15vw;
-        }
-    }
-    @media only screen and (min-width:1440px) {
-        .hero__form-title{
-            font-size:17.28px
-        }
-    }
-    @media only screen and (min-width:1440px) {
-        .desktop picture.attorneys{
-            margin-left: 345.6px;;
-            margin-right: 14.4px;;
-        }
-    }
-        .hero__attorneys {
-        text-align: center;
-        width: 100%
-    }
-
-    .hero__attorneys img {
-        margin: auto
-    }
-
-    .fa,
-    .fab,
-    .fal,
-    .far,
-    .fas {
-        -moz-osx-font-smoothing: grayscale;
-        -webkit-font-smoothing: antialiased;
-        display: inline-block;
-        font-style: normal;
-        font-variant: normal;
-        text-rendering: auto;
-        line-height: 1
-    }
-
-    .fa-phone-volume:before {
-        content: "\f2a0"
-    }
-
-    .headline__big-text{
-        opacity: 0
-    }
-    h2.big_text2{
-        line-height: 1.2;
-    }
-
-
+    @media screen AND (min-width:992px){#mobile-pop-container{display:none}}@media screen AND (max-width:767px){#back-to-top{display:none}}.header__wrap{background:#3c4e66}@media screen AND (min-width:992px){.header__wrap{align-items:center;height:81px}}.u-remove-all-padding{padding:0!important}.container-fluid{align-content:stretch;align-items:stretch;flex-wrap:wrap;max-width:1284px;position:relative}@media only screen and (max-width:767px){.header{flex-wrap:wrap}}@media only screen and (max-width:767px){.section-header-logo{align-items:center;display:-webkit-flex;display:flex;justify-content:center;width:100% justify-content:center}.header{display:flex;justify-content:space-between;padding:10px}.section-header-right img{margin:5px auto}.section-header-logo img{padding-right:5px}}.section-header-logo{justify-content:left;width:25%}.section-header-right{width:75%;display:flex;flex-direction:column;line-height:normal;padding-left:5px;padding-right:5px;justify-content:center;visibility:hidden}.subhero__phone-num{align-items:center;display:flex;display:-webkit-flex;-webkit-align-items:center;-webkit-justify-content:center;font-size:22px;font-weight:400;height:40px;justify-content:center;letter-spacing:1.5px;width:100%}.subhero__phone-num{color:#fff}a.subhero__phone-num:hover{color:#000}@media only screen and (max-width:767px){a.subhero__phone-num{padding-left:2px}}.freeconsult i.fa,.subhero__phone-num i.fa{padding-right:5px}.subhero__free-case-consult{align-items:center;background:#fff;color:#000;display:flex;font-size:18px;justify-content:center;text-align:center;width:100%}.subhero__free-case-consult button{margin-bottom:6px;margin-top:6px;max-width:90vw;width:90vw}.subhero__free-case-consult .btn-primary:not(:disabled):not(.disabled).active{background:#0c1c42}.subhero{align-items:center;display:flex;flex-direction:column;justify-content:space-around;padding:0}@media only screen and (min-width:992px){.subhero{flex-direction:row;justify-content:space-between}}@media only screen and (max-width:767px){.hablamos24{color:#f16825;text-align:center}}@media only screen and (max-width:767px){.hablamos24{width:100%}.hablamos24 a{color:#000}}section{justify-content:unset}.hablamos24 a{color:#000}.hablamos24__wrap{font-size:12px;font-weight:700;display:-webkit-flex;display:flex;padding:0;text-align:center;justify-content:center}@media only screen and (max-width:767px){.hablamos24__wrap{width:100%}.hablamos24__block1,.hablamos24__block2{font-size:calc(12px+.6vw);width:50%}}@media only screen and (max-width:374px){.hablamos24__wrap{padding:0}.hablamos24__block1,.hablamos24__block2{font-size:13px;width:50%}}.hablamos24__block1{text-align:center}.hablamos24__block2{text-align:center}.hablamos24__block1,.hablamos24__block2{padding-bottom:10px;padding-top:10px}@media only screen and (max-width:374px){.hablamos24__block1,.hablamos24__block2{padding:6px}}@media only screen and (min-width:992px){.hablamos24__block1,.hablamos24__block2{padding:12px 15px 12px 15px}.hablamos24__block1{position:relative}}.hero-wrap{background:#ced7e0;background:-moz-linear-gradient(top,#ced7e0 0%,#ffffff 100%);background:-webkit-linear-gradient(top,#ced7e0 0%,#ffffff 100%);background:linear-gradient(to bottom,#ced7e0 0%,#ffffff 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ced7e0',endColorstr='#ffffff',GradientType=0)}.desktop.hero-wrap{overflow:hidden}.standard.hero__attorneys div{height:173px}.webp .standard.hero__attorneys div{background-image:url(/img/hero-group-mobile.webp);background-repeat:no-repeat;background-position:center 100%}.no-webp .standard.hero__attorneys div{background:url(/img/hero-group-mobile.png);background-repeat:no-repeat;background-position:center 100%}@media only screen and (max-width:390px){.webp .standard.hero__attorneys div,.no-webp .standard.hero__attorneys div{background-position:80% 100%}}@media only screen and (max-width:360px){.webp .standard.hero__attorneys div,.no-webp .standard.hero__attorneys div{background-position:70% 100%}}@media only screen and (max-width:345px){.webp .standard.hero__attorneys div{background-position:61% 100%}}.desktop .hero{height:23vw}@media only screen and (min-width:1440px){.desktop .hero{height:331.188px}}.desktop .attorneys{display:flex;align-self:flex-end}.hero{display:-webkit-flex;display:flex;-webkit-justify-content:center;justify-content:center}@media only screen and (min-width:992px){.hero{justify-content:space-between}}section{align-items:center;display:-webkit-flex;display:flex!important}.hero__left{display:block;width:100%}.hero__headline{border:0 solid #fff;padding-top:10px;margin:0 auto;max-width:500px;width:85%}.desktop .hero__headline{max-width:none;flex-direction:column;height:100%}.hero__headline h1,.hero__headline h2{border:0 solid #ccc;color:#3d4e68;font-size:10px;width:100%}.standard .hero__headline h2{font-size:4.5vw}@media screen and (min-width:414px){.standard .hero__headline h2{font-size:22.5px}}.desktop .hero__headline h2{font-size:1.6vw}@media only screen and (min-width:1440px){.desktop .hero__headline{width:403.188px}.desktop .hero__headline h2{font-size:23.024px}}.hero__headline h1{text-transform:uppercase}#wlf-form>div>div.hero__headline>h1.d-none.d-md-block{margin-bottom:0}.headline__big-text{font-size:9px;line-height:1}@media only screen and (min-width:992px){.standard .hero__left{width:70%}.hero__headline{margin:0;padding:0;position:absolute;top:0;width:28vw}.hero__attorneys{display:block;width:100%}.hero .wlf-form{background:0 0;width:30%;max-width:273px}.hero .wlf-form__container{width:100%}.darion .hero .wlf-form__container{padding:0}.desktop picture.attorneys{margin-left:24vw;margin-right:1vw}.hero__form-title{color:#3d4e68;font-size:1.2vw;font-weight:700}.esp .darion .hero__form-title{padding:5px 10px}.hero .tell-us-case{display:none}.hero__awards-cta{align-items:flex-end;display:flex;flex-direction:column;justify-content:space-evenly;display:-ms-flexbox;-ms-flex-pack:center;width:30%}.desktop .superlawyers img{max-width:178px;width:15vw}}@media only screen and (min-width:1440px){.hero__form-title{font-size:17.28px}}@media only screen and (min-width:1440px){.desktop picture.attorneys{margin-left:345.6px;;margin-right:14.4px;}}.hero__attorneys{text-align:center;width:100%}.hero__attorneys img{margin:auto}.fa,.fab,.fal,.far,.fas{-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;display:inline-block;font-style:normal;font-variant:normal;text-rendering:auto;line-height:1}.fa-phone-volume:before{content:"\f2a0"}.headline__big-text{opacity:0}h2.big_text2{line-height:1.2}
 </style>
 
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion_async.js" charset="utf-8"></script>
 
+<!-- Event snippet for EMP - Lead Form Submission conversion page -->
+
+<!-- Global site tag (gtag.js) - Google Ads: 663715077 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-663715077"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'AW-663715077');
+</script>
+
+<script>
+    if(document.URL.indexOf("thank-you") >= 0){
+        gtag('event', 'conversion', {'send_to': 'AW-663715077/ITuRCI-JyOYBEIX6vbwC'});
+        console.log ('Fired gtag')
+    }
+</script>
