updated landing page per jira task 208

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -74,11 +74,11 @@
                     <p>
                         As an employee, you have the right to a safe, comfortable and fair workplace environment free
                         from fear of wrongful termination or unfair dismissal. The passionate wrongful termination
-                        lawyers at Wilshire Law Firm are dedicated to protecting the rights of all workers throughout
+                        lawyers at wrongfulterminationsocal.com are dedicated to protecting the rights of all workers throughout
                         California. Whether you feel you were terminated due to protected classes such as race, age,
                         gender, disabilities, pregnancy or whistleblowing, we will fight for your right to justice and
                         maximum compensation. Retaliation that may have caused termination is against the law. Talk to
-                        one of our lawyers today to see if you have a case. Wilshire Law Firm's legal methods work, with
+                        one of our lawyers today to see if you have a case. wrongfulterminationsocal.com's legal methods work, with
                         the proof being that we've won our clients more than $750,000,000 in compensation. Wrongful
                         termination is never an acceptable approach a company should take against their employees. The
                         process is entirely discreet and you don’t pay unless you win. If you have any questions about
