--- a/site/layouts/partials/whywlf.html
+++ b/site/layouts/partials/whywlf.html
@@ -1,5 +1,5 @@
 <div class="whywlf mobile-desktop">
-    <h2 class="font-weight-bold">WHY WILSHIRE LAW FIRM?</h2>
+    <h2 class="font-weight-bold">WHY WRONGFULTERMINATIONSOCAL.COM?</h2>
     <p>
         Our team of more than 100 legal professionals doesn’t leave any case up to chance. We confidently prepare every
         case for trial and are not afraid to take your claim to court. Our innovative legal strategies will get you the
