updated landing page per jira task 208

--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -52,7 +52,7 @@
                     'eventAction':'Call',
                     'eventNumber': 'Header Mobile Call- {{ .Site.Params.phoneNumDigitsOnly }}'
                    });">
-        <span class="phoneNumberFormatted">e</span>
+        <span class="phoneNumberFormatted"></span>
       </a>
       <div class="header__chatwidget header__text1"
            onclick="window.open('https://platform.clientchatlive.com/w/chat/#/chat/wChz3T/register', '', 'width=800,height=500,toolbar=0,menubar=0,location=0,status=0,scrollbars=1,menubar=0,toolbar=0,resizable=1,left=50,top=50');">
