--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -1,7 +1,7 @@
-<noscript>
-  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5R7F2G9" height="0" width="0"
-          style="display:none;visibility:hidden"></iframe>
-</noscript>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TZKSC76"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 <!-- Header Start -->
 <div class="header__wrap">
