testing overall speed score not tracking

--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -1,7 +1,7 @@
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TZKSC76"
-                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+<!--&lt;!&ndash; Google Tag Manager (noscript) &ndash;&gt;-->
+<!--<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TZKSC76"-->
+<!--                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>-->
+<!--&lt;!&ndash; End Google Tag Manager (noscript) &ndash;&gt;-->
 
 <!-- Header Start -->
 <div class="header__wrap">
