--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -17,13 +17,13 @@
 
 {{ hugo.Generator }}
 
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-TZKSC76');</script>
-<!-- End Google Tag Manager -->
+<!--&lt;!&ndash; Google Tag Manager &ndash;&gt;-->
+<!--<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':-->
+<!--        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],-->
+<!--    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=-->
+<!--    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);-->
+<!--})(window,document,'script','dataLayer','GTM-TZKSC76');</script>-->
+<!--&lt;!&ndash; End Google Tag Manager &ndash;&gt;-->
 {{- partial "head_custom.html" . }}
 
 <link rel="preconnect" href="https://www.google-analytics.com">
